corpus/cpp/template/case-02/snapshots/gcc15/dual_sink_structured/render.default.txt
error: [template] no matching function for call to 'expect_ptr(int&)' @ src/main.cpp:6:5
raw : no matching function for call to 'expect_ptr(int&)'
| src/main.cpp:6:5
|     expect_ptr(value);
|     ^
while instantiating:
  - src/main.cpp:2:6 candidate 1: 'template<class T> void expect_ptr(T*)'
omitted 2 internal template frames
details: --formed-explain | raw: --formed-raw